# ai-resume

./: .gitignore  .markdownlintrc  AUTHORS.md  LICENSE  MEMVID_LEX_INDEX_INVESTIGATION.md  README.md  test_resume.mv2
.claude/: plan.md  settings.json
.claude/hooks/: post-edit.sh  protect-files.sh  validate-bash.sh  validate-pr.sh  verify-quality.sh
.github/workflows/: ci.yml
api-service/: .dockerignore  .gitignore  Dockerfile  README.md  app  healthcheck  main.py  pyproject.toml  start.py
api-service/ai_resume_api/: __init__.py  config.py  guardrails.py  main.py  memvid_client.py  models.py  observability.py  openrouter_client.py  query_transform.py  role_classifier.py  session_store.py
api-service/ai_resume_api/memvid/v1/: memvid_pb2.py  memvid_pb2_grpc.py
api-service/ai_resume_api/proto/memvid/v1/: memvid_pb2.py  memvid_pb2.pyi  memvid_pb2_grpc.py
api-service/tests/: __init__.py  conftest.py  test_config.py  test_e2e_api.py  test_e2e_grpc.py  test_guardrails.py  test_integration.py  test_main.py  test_memvid_client.py  test_memvid_client_grpc.py  test_models.py  test_openrouter_client.py  test_query_transform.py  test_role_classifier_e2e.py  test_session_store.py
api-service/tests/fixtures/: job_descriptions.py
data/: .gitignore  example_resume.md
data/.memvid/: .gitkeep
deployment/: .env.example  .gitignore  README.md  compose.yaml  pyproject.toml
docs/: AGENTIC_FLOW.md  ARCHITECTURE.md  DEVELOPMENT.md  MASTER_DOCUMENT_SCHEMA.md  ONTOLOGY-CONSIDERATIONS.md  PRD.md  PROMPT_INJECTION_TESTS.md  SECURITY.md  SETUP.md  TESTING.md  TEST_COVERAGE.md  TODO.md
frontend/: .dockerignore  .gitignore  Dockerfile  index.html  nginx-default.conf  nginx.conf  package-lock.json  package.json  seo-template.html  tailwind.config.ts  vite.config.ts
frontend/lua/: seo-handler.lua
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AIChat.tsx  Experience.tsx  ExperienceCard.tsx  FitAssessment.tsx  Footer.tsx  Header.tsx  Hero.tsx
frontend/src/context/: ProfileContext.tsx
frontend/src/hooks/: useProfile.ts  useStreamingChat.ts
frontend/src/hooks/__tests__/: useProfile.test.ts
frontend/src/lib/: api-client.ts
frontend/src/lib/__tests__/: api-client.test.ts
frontend/src/pages/: Index.tsx
ingest/: .gitignore  README.md  compare_models.py  ingest.py  pyproject.toml  test_compare_models.py  test_e2e.py  test_ingest_retrieval.py  test_memvid.py  test_memvid_lex_diagnostics.py  test_parsing.py
ingest/tests/: __init__.py  test_compare_models.py  test_e2e.py  test_embeddings.py  test_ingest_edge_cases.py  test_ingest_retrieval.py  test_memvid.py  test_memvid_lex_diagnostics.py  test_parsing.py
memvid-service/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
memvid-service/src/: config.rs  error.rs  lib.rs  main.rs  metrics.rs
memvid-service/src/grpc/: mod.rs  service.rs
memvid-service/src/memvid/: mock.rs  mod.rs  real.rs  searcher.rs
memvid-service/tests/: main_integration_tests.rs
proto/memvid/v1/: memvid.proto
scripts/: build-all.sh  deploy.sh  dev-setup.sh  export-containers.sh  gen-proto.sh  install-hooks.sh  memvid-start.sh  publish-containers.sh  release-gate.sh  test-containers.sh  test-e2e-integration.sh  test-e2e-mock-gates.sh  test-e2e-real.sh  test-ingest.sh  test-integration.sh  test_portability.py  train-memvid.sh  verify-quality.sh
scripts/hooks/: commit-msg  pre-commit
