[project]
name = "api-service"
version = "1.0.1"
description = "Python FastAPI service for AI Resume - handles API orchestration and OpenRouter LLM integration"
authors = []
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.115.6",
    "starlette>=0.49.1",
    "setuptools>=80.10.2",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.22",
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "grpcio>=1.69.0",
    "grpcio-tools>=1.69.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "prometheus-client>=0.21.1",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "structlog>=24.4.0",
    "cachetools>=5.5.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "pytest-cov>=6.0.0",
]
lint = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "ruff>=0.8.6",
    "mypy>=1.14.1",
]
sbom = [
    "poetry>=2.2.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai_resume_api"]

[tool.black]
line-length = 100
target-version = ["py312"]
include = "\\.pyi?$"

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_subclassing_any = true
warn_unused_ignores = true
strict_equality = true

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["ai_resume_api/proto/"]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=ai_resume_api --cov-report=term-missing"
markers = [
    "slow: marks tests that require external services (deselect with '-m \"not slow\"')",
]
