[project]
name = "ingest"
version = "0.1.1"
description = "Memvid ingestion pipeline for AI Resume - runs natively on MacOS for NPU acceleration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "memvid-sdk==2.0.153",
    "sentence-transformers>=3.0.0",
    "setuptools>=80.10.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.4",
    "numpy>=1.24.0",
]
lint = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "ruff>=0.8.6",
    "mypy>=1.14.1",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = ["-v", "--strict-markers", "--tb=short"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "anyio: async test marker",
]
